--- a/index.html
+++ b/index.html
@@ -268,6 +268,29 @@
 
         <button type="submit">Submit</button>
     </form>
+    <script>
+        document.getElementById('caseForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+            const data = {
+                case_type: document.getElementById('case_type').value,
+                case_number: document.getElementById('case_number').value,
+                case_year: document.getElementById('case_year').value
+            };
+            fetch('http://localhost:8000/scrape', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            })
+                .then(response => response.json())
+                .then(json => {
+                    document.getElementById('result').innerText = JSON.stringify(json, null, 2);
+                })
+                .catch(err => {
+                    console.error(err);
+                    document.getElementById('result').innerText = "❌ Failed to fetch.";
+                });
+        });
+    </script>
 </body>
 
 </html>
