--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <h1>Search Case</h1>
-    <form method="GET" action="#">
+    <form id="caseForm">
         <label for="case_type">Case Type:</label>
         <select class="form-control" name="case_type" id="case_type">
             <option value="">Select</option>
